# catmonic-landinglens

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
catmonic/: catmonic.py
catmonic-app/: catmonic_cli_app.py  catmonic_cli_app_test_boo.bat  catmonic_cli_app_test_boo.sh  catmonic_cli_app_test_simba.bat  catmonic_cli_app_test_simba.sh  catmonic_cli_app_test_simba_miss.sh  catmonic_cli_app_test_unknown.bat  catmonic_cli_app_test_unknown.sh
datasets/: DATASETS_README.md
